Warn pre-solve when any teacher is over capacity, and cover pinned conflicts
PreSolveValidator previously validated pinned assignments only - correct
for its original purpose (the solver's hard constraints exclude pinned
rows entirely), but it meant a teacher whose total assigned hours exceed
their total availability was never caught before a solve, no matter how
the data got there (hand-edited via the API, bulk Excel import, direct
SQL) or how the solve was triggered (CLI or the web "Run Solver" button -
both funnel through MainBlockSchedulingApp).

ValidationResult now carries two severities: problems (blocking, pinned
data only, unchanged) and warnings (new, non-blocking). validateCapacity()
sums every assignment's blockLength per teacher - pinned and movable alike
- against Teacher.getTotalAvailableHours(), same basis as
TeacherController.buildCapacityWarning(). Verified live against the
current database: correctly flags Yara Esther (31h assigned vs 30h
available) before a single second of solving.

Also closes a test-coverage gap in the pre-existing pairwise pinned-conflict
checks: only the teacher-double-booking branch had a dedicated test, even
though the group-clash and room-double-booking branches sit right next to
it in the same loop. Added pinnedGroupClashIsReported and
pinnedRoomDoubleBookingIsReported, each asserting the other branches stay
silent so the three checks are verified in isolation.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>